--- a/apps/CELAR/Makefile
+++ b/apps/CELAR/Makefile
@@ -1,11 +1,6 @@
-####  COMPILING AND LINKING OPTIONS  ####
-
-#  Uncomment the following line, for Sun compilation at di.uoa.gr domain.
-#CPATH = /usr/sfw/bin/
-
-#  Uncomment the following line, for gcc versions greater than 4.2.
+# Compiler and Linker Options
+# Comment out the following line, for gcc versions less than 4.3.
 STANDARD = -std=c++0x
-#LDFLAGS2 = -Wl,--enable-auto-import
 
 NDIR = ../../core/bounds-consistency
 NDIR_AC = ../naxos-AC
@@ -32,10 +27,7 @@ LDPROFFLAGS = $(LDDEBFLAGS) -pg
 
 RM = \rm -f
 
-
-
-
-####  SOURCE AND OUTPUT FILENAMES  ####
+# Filenames
 NHDRS_AC =  $(NDIR_AC)/naxos.h $(NDIR_AC)/queue.h $(NDIR_AC)/stack.h
 NHDRS =  $(NDIR)/naxos.h $(NDIR)/internal.h $(NDIR)/stack.h
 NSRCS_AC =  $(NDIR_AC)/problemmanager.cpp $(NDIR_AC)/intvar.cpp $(NDIR_AC)/expressions.cpp $(NDIR_AC)/constraints.cpp
@@ -53,11 +45,7 @@ OBJS_AC = $(NSRCS_AC:.cpp=.AC.o) $(ASRCS:.cpp=.AC.o) $(SRCS:.cpp=.AC.o)
 
 PROG =  celar_solver
 
-
-
-
-
-####  BUILDING  ####
+# Building Bounds-Consistency
 EXEPROG = $(PROG)
 
 .PHONY: exe
@@ -73,10 +61,7 @@ $(ADIR)/%.o :  $(ADIR)/%.cpp $(NHDRS) $(AHDRS)
 %.o :  %.cpp $(HDRS)
 	$(CC) $(CFLAGS) -c  $<
 
-
-
-
-####  BUILDING AC  ####
+# Building Arc-Consistency
 PROG_AC = $(PROG).AC
 
 .PHONY: AC
@@ -92,30 +77,7 @@ $(ADIR)/%.AC.o :  $(ADIR)/%.cpp $(NHDRS_AC) $(AHDRS)
 %.AC.o :  %.cpp $(HDRS_AC)
 	$(CC) $(CFLAGS_AC) -c  $<  -o $@
 
-
-
-
-# ####  BUILDING MINGW  ####
-# WINPROG = $(PROG).mingw.exe
-# WINOBJS = $(OBJS:.o=.mingw.o)
-# 
-# .PHONY: mingw
-# mingw :  $(WINPROG)
-# 
-# $(WINPROG) :  $(WINOBJS)
-# 	$(LD) $(LDFLAGS)  $(WINOBJS)  -o $@
-# 
-# $(NDIR)/%.mingw.o :  $(NDIR)/%.cpp $(NHDRS)
-# 	$(CC) $(NCFLAGS) -c  $<  -o $@
-# $(ADIR)/%.mingw.o :  $(ADIR)/%.cpp $(NHDRS) $(AHDRS)
-# 	$(CC) $(ACFLAGS) -c  $<  -o $@
-# %.mingw.o :  %.cpp $(HDRS)
-# 	$(CC) $(CFLAGS) -c  $<  -o $@
-
-
-
-
-####  DEBUGGING  ####
+# Debugging
 DEBPROG = $(PROG).debug
 DEBOBJS = $(OBJS:.o=.debug.o)
 
@@ -132,10 +94,7 @@ $(ADIR)/%.debug.o :  $(ADIR)/%.cpp $(NHDRS) $(AHDRS)
 %.debug.o :  %.cpp $(HDRS)
 	$(CC) $(CDEBFLAGS) -c  $<  -o $@
 
-
-
-
-####  PROFILING  ####
+# Profiling
 PROFPROG = $(PROG).prof
 PROFOBJS = $(OBJS:.o=.prof.o)
 
@@ -148,17 +107,14 @@ $(PROFPROG) :  $(PROFOBJS)
 %.prof.o :  %.cpp $(HDRS)
 	$(CC) $(CPROFFLAGS) -c  $<  -o $@
 
-
-
-
-####  CLEANING UP  ####
+# Cleaning Up
 TODEL = $(PROG) $(PROG).exe $(OBJS) $(PROG_AC) $(PROG_AC).exe $(OBJS_AC) $(DEBPROG) $(DEBPROG).exe $(DEBOBJS) $(PROFPROG) $(PROFPROG).exe $(PROFOBJS)
 
 .PHONY: clean
 clean:
 	$(RM) $(TODEL)
 
-### TESTING ###
+# Testing
 .PHONY: test
 test:
 	./verification.sh
