Fix Travis CI YAML syntax
'include' is needed only once inside a 'matrix'.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,96 +14,73 @@ env:
 
 matrix:
   include:
-    env: DIRECTORY="apps/"
+    - env: DIRECTORY="apps/"
 
-  include:
-    env: DIRECTORY="apps/XCSP3/"
+    - env: DIRECTORY="apps/XCSP3/"
 
-  include:
-    env: DIRECTORY="apps/ACvsBC/"
+    - env: DIRECTORY="apps/ACvsBC/"
 
-  include:
-    env: DIRECTORY="apps/CELAR/"
-         DATASET="SCEN06"
-  include:
-    env: DIRECTORY="apps/CELAR/"
-         DATASET="SCEN07"
-  include:
-    env: DIRECTORY="apps/CELAR/"
-         DATASET="SCEN08"
-  include:
-    env: DIRECTORY="apps/CELAR/"
-         DATASET="SCEN09"
-  include:
-    env: DIRECTORY="apps/CELAR/"
-         DATASET="SCEN10"
+    - env: DIRECTORY="apps/CELAR/"
+           DATASET="SCEN06"
+    - env: DIRECTORY="apps/CELAR/"
+           DATASET="SCEN07"
+    - env: DIRECTORY="apps/CELAR/"
+           DATASET="SCEN08"
+    - env: DIRECTORY="apps/CELAR/"
+           DATASET="SCEN09"
+    - env: DIRECTORY="apps/CELAR/"
+           DATASET="SCEN10"
 
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp01.ctt"
-         METHOD="DFS"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp02.ctt"
-         METHOD="LDS"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp03.ctt"
-         METHOD="IBROAD"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp04.ctt"
-         METHOD="PoPS"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp05.ctt"
-         METHOD="DBS"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp06.ctt"
-         METHOD="CREDIT 100"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp07.ctt"
-         METHOD="LAN 20"
-         METHOD_LOCAL_SEARCH="DBDS"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp08.ctt"
-         METHOD="BBS 100"
-         METHOD_LOCAL_SEARCH="DFS RANDOM_VAR_HEUR"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp09.ctt"
-         METHOD="RDFS 100 1000"
-         METHOD_LOCAL_SEARCH="DFS RANDOM_VAL_HEUR"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp10.ctt"
-         METHOD="GNS"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp11.ctt"
-         METHOD="FNS fSample"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp12.ctt"
-         METHOD="FNS fSampleMiddle"
-         METHOD_LOCAL_SEARCH="FNS fSampleExp"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp13.ctt"
-         METHOD="ISAMP 1000"
-  include:
-    env: DIRECTORY="apps/ITC/"
-         DATASET="comp14.ctt"
-         METHOD="ONESAMP"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp01.ctt"
+           METHOD="DFS"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp02.ctt"
+           METHOD="LDS"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp03.ctt"
+           METHOD="IBROAD"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp04.ctt"
+           METHOD="PoPS"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp05.ctt"
+           METHOD="DBS"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp06.ctt"
+           METHOD="CREDIT 100"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp07.ctt"
+           METHOD="LAN 20"
+           METHOD_LOCAL_SEARCH="DBDS"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp08.ctt"
+           METHOD="BBS 100"
+           METHOD_LOCAL_SEARCH="DFS RANDOM_VAR_HEUR"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp09.ctt"
+           METHOD="RDFS 100 1000"
+           METHOD_LOCAL_SEARCH="DFS RANDOM_VAL_HEUR"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp10.ctt"
+           METHOD="GNS"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp11.ctt"
+           METHOD="FNS fSample"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp12.ctt"
+           METHOD="FNS fSampleMiddle"
+           METHOD_LOCAL_SEARCH="FNS fSampleExp"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp13.ctt"
+           METHOD="ISAMP 1000"
+    - env: DIRECTORY="apps/ITC/"
+           DATASET="comp14.ctt"
+           METHOD="ONESAMP"
 
-  include:
-    env: DIRECTORY="apps/hadoop/"
+    - env: DIRECTORY="apps/hadoop/"
 
-  include:
-    env: DIRECTORY="amorgos/apps/"
+    - env: DIRECTORY="amorgos/apps/"
 
 script:
     - cd $DIRECTORY
