--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,13 @@ matrix:
     - env: DIRECTORY="apps/"
 
     - env: DIRECTORY="apps/XCSP3/"
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-7
+            - g++-7
 
     - env: DIRECTORY="apps/ACvsBC/"
       addons:
