--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ matrix:
           packages:
             - gcc-6
             - g++-6
-      script:
+      before_install:
         - sed -i 's/g++/g++-6/' $DIRECTORY/XCSP3-CPP-Parser/samples/makefile
 
     - env: DIRECTORY="apps/ACvsBC/"
