Coveralls should be globally installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@
 language: cpp
 
 before_install:
-  - pip install --user cpp-coveralls
+  global:
+    - pip install --user cpp-coveralls
 
 env:
   global:
