--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,9 @@ matrix:
     - env: DIRECTORY="apps/XCSP3/"
       addons:
         apt:
+          sources:
+            - ubuntu-toolchain-r-test
           packages:
-            - gcc-6
             - g++-6
       before_script:
         - sed -i 's/g++/g++-6/' $DIRECTORY/XCSP3-CPP-Parser/samples/makefile
