--- a/apps/XCSP3/Makefile
+++ b/apps/XCSP3/Makefile
@@ -4,7 +4,7 @@ NAXOS = ../../core/bounds-consistency
 # Compiler Options
 CXX = g++
 WARNINGS = -pedantic -Wall -W -Wshadow -Werror
-CXXFLAGS = $(WARNINGS) -std=c++11 -O2 $(COVERAGE)
+CXXFLAGS = $(WARNINGS) -std=c++0x -O2 $(COVERAGE)
 LD = $(CXX)
 LDFLAGS = -s $(COVERAGE)
 
