--- a/apps/XCSP3/Makefile
+++ b/apps/XCSP3/Makefile
@@ -25,7 +25,7 @@ PARSER_SOURCES = $(wildcard $(PARSER)/src/*.cc)
 PARSER_OBJECTS = $(PARSER_SOURCES:.cc=.o)
 
 .PHONY: all
-all: $(PROGRAMS) parser
+all: $(PROGRAMS)
 $(OBJECTS): %.o: %.cpp $(HEADERS)
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 $(PARSER_OBJECTS): %.o: %.cc
