Revert "The parser's compilation is tested via its own Makefile"
This reverts commit af00a5f6add80758a03e086de25f1a41aee236ad.

--- a/apps/XCSP3/Makefile
+++ b/apps/XCSP3/Makefile
@@ -25,7 +25,7 @@ PARSER_SOURCES = $(wildcard $(PARSER)/src/*.cc)
 PARSER_OBJECTS = $(PARSER_SOURCES:.cc=.o)
 
 .PHONY: all
-all: $(PROGRAMS)
+all: $(PROGRAMS) parser
 $(OBJECTS): %.o: %.cpp $(HEADERS)
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 $(PARSER_OBJECTS): %.o: %.cc
