--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,11 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
+            - valgrind
       before_script:
         - cd $DIRECTORY
-        - cmake -DCXX=g++-4.9 .
+        - export CXX=g++-4.9
+        - cmake .
         - cd -
 
     - env: DIRECTORY="apps/ACvsBC/"
