Fix command name for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -112,7 +112,7 @@ matrix:
 script:
     - cd $DIRECTORY
     - make -j
-    - test -e CMakeLists.txt && cmake -V || make test
+    - test -e CMakeLists.txt && ctest -V || make test
     - cd -
 
 after_success:
