Revert "Simplify installed packages"
This reverts commit 7eae322fc10dd5566b8a28905f60e11fa386dc57.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ env:
 matrix:
   include:
     - env: DIRECTORY="apps/"
+      addons:
+        apt:
+          packages:
+            - valgrind
 
     - env: DIRECTORY="apps/XCSP3/"
       addons:
