Clone XCSP3-CPP-Parser as an external project

--- a/apps/XCSP3/CMakeLists.txt
+++ b/apps/XCSP3/CMakeLists.txt
@@ -5,8 +5,22 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s $ENV{COVERAGE}")
 include_directories(../../core/bounds-consistency)
 add_subdirectory(../../core/bounds-consistency ../../core/bounds-consistency)
 
+include(ExternalProject)
+ExternalProject_Add(XCSP3-CPP-Parser
+    PREFIX parser
+    GIT_REPOSITORY https://github.com/pothitos/XCSP3-CPP-Parser.git
+    CONFIGURE_COMMAND ""
+    BINARY_DIR parser/src/XCSP3-CPP-Parser/samples
+    BUILD_COMMAND make lib
+    INSTALL_COMMAND ""
+)
+
+add_library(parserxcsp3core STATIC IMPORTED)
+set_target_properties(parserxcsp3core PROPERTIES IMPORTED_LOCATION
+                      parser/src/XCSP3-CPP-Parser/lib/libparserxcsp3core.a)
+
 add_executable(naxos-xcsp3 naxos-xcsp3.cpp)
-target_link_libraries(naxos-xcsp3 naxos)
+target_link_libraries(naxos-xcsp3 naxos parserxcsp3core)
 
 enable_testing()
 add_test(verification verification.sh)
