Revert "Debug CMake for external project"
This reverts commit 53d3aa6c588e5ad854a9c285c712046b5065b179.

--- a/.travis.yml
+++ b/.travis.yml
@@ -117,7 +117,7 @@ matrix:
 script:
     - cd $DIRECTORY
     - test -e CMakeLists.txt && cmake . || true
-    - make VERBOSE=1
+    - make -j
     - test -e CMakeLists.txt && ctest -V || make test
     - cd -
 
