Install clang-format-5.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,11 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise
           packages:
             - g++-4.9
             - valgrind
+            - clang-format-5.0
       before_script:
         - CXX=g++-4.9
 
