Depend to the parser's library explicitly
This addresses the issue that the library isn't completely
built before compiling the final executable. This happens
when the 'make' recipes run in parallel as in
https://travis-ci.org/pothitos/naxos/jobs/200041712

--- a/apps/XCSP3/CMakeLists.txt
+++ b/apps/XCSP3/CMakeLists.txt
@@ -21,6 +21,7 @@ set_target_properties(parserxcsp3core PROPERTIES IMPORTED_LOCATION
 
 add_executable(naxos-xcsp3 naxos-xcsp3.cpp)
 target_link_libraries(naxos-xcsp3 naxos parserxcsp3core)
+add_dependencies(naxos-xcsp3 parserxcsp3core)
 
 enable_testing()
 add_test(verification verification.sh)
