--- a/apps/XCSP3/CMakeLists.txt
+++ b/apps/XCSP3/CMakeLists.txt
@@ -11,7 +11,7 @@ ExternalProject_Add(XCSP3-CPP-Parser
     GIT_REPOSITORY https://github.com/pothitos/XCSP3-CPP-Parser.git
     CONFIGURE_COMMAND ""
     BINARY_DIR parser/src/XCSP3-CPP-Parser/samples
-    BUILD_COMMAND make -j lib
+    BUILD_COMMAND make lib
     INSTALL_COMMAND ""
 )
 
